fix: left align aboubt title on mobile only

--- a/assets/sass/4-layouts/_about.scss
+++ b/assets/sass/4-layouts/_about.scss
@@ -16,7 +16,11 @@
 }
 
 .layout-about .page-title {
-  text-align: left;
+  text-align: center;
+
+  @media (max-width: $mobile) {
+    text-align: left;
+  }
 }
 
 .page__content blockquote {
